--- a/.github/workflows/deepAgentRegression.yml
+++ b/.github/workflows/deepAgentRegression.yml
@@ -1,8 +1,8 @@
 name: Deep Agent Regression Suite
 
 on:
-  schedule:
-    - cron: "30 4 * * *" # 10 AM IST
+  # schedule:
+  #   - cron: "30 4 * * *" # 10 AM IST
   # push:
   #   branches: ["master"]
   # pull_request:
