--- a/.github/workflows/deepAgentRegression.yml
+++ b/.github/workflows/deepAgentRegression.yml
@@ -27,8 +27,8 @@ jobs:
       # fallback for TEST_ENV if not set from manual dispatch
       TEST_ENV: ${{ github.event.inputs.Environment || 'prod' }}
       SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
-      SLACK_CHANNEL_ID: "C07FJG27D2L"
-      FAILURE_SLACK_CHANNEL_ID: "C07FJG27D2L"
+      SLACK_CHANNEL_ID: "CGJFM3XCM"
+      FAILURE_SLACK_CHANNEL_ID: "CGJFM3XCM"
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -79,7 +79,7 @@ jobs:
           echo "thread_ts=$threadTs" >> $env:GITHUB_OUTPUT
         env:
           SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
-          SLACK_CHANNEL_ID: "C07FJG27D2L"
+          SLACK_CHANNEL_ID: "CGJFM3XCM"
           GITHUB_ACTIONS: "true"
 
       - name: Debug - Environment Variables
@@ -211,7 +211,7 @@ jobs:
           node helpers/postBuildStatus.js "success" "$threadTs"
         env:
           SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
-          SLACK_CHANNEL_ID: "C07FJG27D2L"
+          SLACK_CHANNEL_ID: "CGJFM3XCM"
           GITHUB_SERVER_URL: ${{ github.server_url }}
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_RUN_ID: ${{ github.run_id }}
@@ -239,8 +239,8 @@ jobs:
           node helpers/postBuildStatus.js "failure" "$threadTs"
         env:
           SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
-          SLACK_CHANNEL_ID: "C07FJG27D2L"
-          FAILURE_SLACK_CHANNEL_ID: "C07FJG27D2L"
+          SLACK_CHANNEL_ID: "CGJFM3XCM"
+          FAILURE_SLACK_CHANNEL_ID: "CGJFM3XCM"
           GITHUB_SERVER_URL: ${{ github.server_url }}
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_RUN_ID: ${{ github.run_id }}
