--- a/.github/workflows/smoke_tests.yml
+++ b/.github/workflows/smoke_tests.yml
@@ -18,7 +18,7 @@ on:
       SlackChannelId:
         required: false
         type: string
-        default: "C0189FJRC9E"
+        default: "CGJFM3XCM"
       FailureSlackChannelId:
         required: false
         type: string
